[gd_scene load_steps=17 format=3 uid="uid://dqbthko1jthwh"]

[ext_resource type="Script" path="res://models/Catchables/shark_area.gd" id="1_7gpjf"]
[ext_resource type="PackedScene" uid="uid://c58bkyjaals63" path="res://models/Decorations/shark_dorsal.glb" id="1_kstmr"]
[ext_resource type="Script" path="res://scripts/Resources/CatchableRes.gd" id="2_anaco"]
[ext_resource type="Resource" uid="uid://cdinhdv0bl53j" path="res://scripts/Resources/Catchables/Fishes/Shark.tres" id="3_1kpb3"]
[ext_resource type="Resource" uid="uid://bq7rfd0awtdhf" path="res://scripts/Resources/Catchables/Fishes/HammerShark.tres" id="4_rgpdx"]
[ext_resource type="Script" path="res://scripts/Resources/FishingAreaRes.gd" id="5_bmlv8"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="7_4ep7s"]
[ext_resource type="Script" path="res://scripts/SharkAreaSM/catching_state.gd" id="9_h0m2g"]
[ext_resource type="Script" path="res://scripts/SharkAreaSM/retreive_position_state.gd" id="10_ff3eu"]
[ext_resource type="Script" path="res://scripts/SharkAreaSM/default_orbiting_state.gd" id="12_qtqvx"]

[sub_resource type="Resource" id="Resource_s21m3"]
script = ExtResource("5_bmlv8")
name = ""
type = 1
waiting_time = 3.0
catchables = Array[ExtResource("2_anaco")]([ExtResource("3_1kpb3"), ExtResource("4_rgpdx")])
default_catchables = Array[ExtResource("2_anaco")]([])

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qwu4a"]
radius = 3.0

[sub_resource type="Animation" id="Animation_8m1n1"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_1f5kg"]
resource_name = "emerge"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -1, 0, 1, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_buqpl"]
resource_name = "sunk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2fcv2"]
_data = {
"RESET": SubResource("Animation_8m1n1"),
"emerge": SubResource("Animation_1f5kg"),
"sunk": SubResource("Animation_buqpl")
}

[node name="Node3D" type="Area3D"]
collision_layer = 4096
collision_mask = 256
script = ExtResource("1_7gpjf")
fishTable = SubResource("Resource_s21m3")
is_one_shot = true

[node name="RigidBody3D" type="RigidBody3D" parent="."]
mass = 0.001
gravity_scale = 0.0

[node name="SharkDorsal" parent="RigidBody3D" instance=ExtResource("1_kstmr")]
transform = Transform3D(-2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_qwu4a")

[node name="OrbitCenter" type="Node3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2fcv2")
}

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("7_4ep7s")

[node name="CatchingState" type="Node" parent="."]
script = ExtResource("9_h0m2g")

[node name="OrbitCenter" type="Node3D" parent="CatchingState"]

[node name="RetreivePositionState" type="Node" parent="."]
script = ExtResource("10_ff3eu")

[node name="DefaultOrbitingState" type="Node" parent="."]
script = ExtResource("12_qtqvx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
